--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,17 @@ body, html{
   padding: 0;
   border: 0;
   background-color: lightgrey;
-  font-family: ;/*definir*/
+  font-family: 'Lato', sans-serif;
+}
+
+.main-container {
+  margin-top: 0.8rem;
 }
 
 /*Defino el grid container*/
 .contenedor{
   display: grid;
-  grid-template-columns: 15% 1fr;
+  grid-template-columns: 13% 1fr;
   grid-template-areas: 
   " header header"
   "aside main"
@@ -22,27 +26,79 @@ header{
   text-align: center;
   background-color: #1e365a;
   color: white;
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 aside{
   grid-area: aside;
-
+  display: flex;
+	min-height: 100%;
+	flex-grow: 1;
+  flex-direction: column;
+  align-items: center;
 }
+
 main{
   grid-area: main;
 }  
 
 footer{
   grid-area: footer;
+  display: flex;
+  background-color: #fff;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 18px;
+  color: #525151;
 }
 
 .cards-container{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 0.8rem;
+  gap: 0.5rem;
   height: 100%;
 }
-.lista
+
+.card {
+  margin: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #fff;
+}
+
+.card-title {
+  margin-bottom: 0px;
+  color: #383838;
+}
+
+.card-price {
+  color: #525151;
+}
+
+.card-buttom {
+  background-color: #1e365a;
+  color: #fff;
+  height: 2.5rem;
+  font-size: 16px;
+  border: #1e365a;
+}
+
+.lista {
+  padding-top: 1rem;
+}
+
+.title-aside {
+  padding-left: 0;
+  color: #383838;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+  color: #525151;
+}
+
 @media (min-width: 500px){
   .hola{
     grid-template-areas:
